test/types/typedefs/bradc/redefineTypeNames.good
redefineTypeNames.chpl:3: error: attempt to redefine reserved type 'int'
redefineTypeNames.chpl:4: error: attempt to redefine reserved type 'real'
redefineTypeNames.chpl:5: error: attempt to redefine reserved type 'bool'
redefineTypeNames.chpl:6: error: attempt to redefine reserved type 'string'
redefineTypeNames.chpl:7: error: attempt to redefine reserved type 'complex'
redefineTypeNames.chpl:8: error: attempt to redefine reserved type 'imag'
redefineTypeNames.chpl:18: error: attempt to redefine reserved type 'int'
redefineTypeNames.chpl:20: error: attempt to redefine reserved type 'imag'
redefineTypeNames.chpl:22: error: attempt to redefine reserved type 'complex'
